desktop version working

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,54 +1,88 @@
-.navbar-container {
-  text-transform: uppercase;
-}
-
-.header {
-  grid-column: 1 / -1;
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-}
-
-.header .nav-link,
-.nav-item {
-  padding: 1em 1.35em;
-}
-.header .nav-link:hover {
-  background-color: #a0a0a0;
-  height: 100%;
-}
-.navigation {
-  justify-content: space-between;
-  display: flex;
-  background-color: black;
-  color: white;
-  grid-column: 1 / -1;
-}
-
-.nav-links {
-  width: 100%;
+body {
   margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.nav-link {
-  margin: 0;
-}
-
-.nav-item:hover {
-  background-color: #a0a0a0;
-}
-
-.open-nav {
-  color: white;
-  background: 0;
-  border: 0;
   font-size: 1rem;
-  padding: 0 1.25em;
-  margin: 0;
+  line-height: 1.6;
+  font-family: "Montserrat" sans-serif;
 }
-.open-nav:hover {
-  background: #a0a0a0;
+
+.container {
+  display: grid;
+  grid-template-columns: 70px auto auto;
+  grid-template-rows: auto auto;
+  background-color: aliceblue;
+}
+
+.nav-container {
+  background-color: black;
+  padding: 1em;
+}
+
+/* The UL */
+.nav-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  grid-column: 1 / 5;
+  grid-row: 1 / 2;
+}
+.nav-link:hover {
+  background-color: grey;
+}
+.nav-item {
+  padding: 1em;
+}
+.nav-link,
+.nav-link-home {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+.btn {
+  cursor: pointer;
+  color: white;
+  grid-column: 5 / 6;
+  grid-row: 1 / 1;
+  align-self: center;
+  justify-self: flex-end;
+}
+.nav-link-home {
+  padding: 1em;
+  grid-column: 1 / 5;
+}
+.nav {
+  grid-column: 1 / 6;
+  grid-row: 2 / -1;
+}
+.hidden {
+  display: none;
+}
+
+.finder {
+  display: none;
+  color: white;
+  justify-self: flex-end;
+  align-self: center;
+}
+
+@media (min-width: 600px) {
+  .nav {
+    grid-column: 2 /3;
+    grid-row: 1 /1;
+  }
+  .nav-link-home {
+    /* justify-self: flex-start; */
+    align-self: center;
+    grid-column: 1 /1;
+  }
+  .nav-links {
+    display: flex;
+    justify-content: flex-start;
+    align-self: flex-start;
+  }
+  .finder {
+    display: block;
+  }
+  .btn {
+    display: none;
+  }
 }
